[package]
name = "cs140-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cs140-common = { path = "../cs140-common" }
cs140-buffer = { path = "../cs140-buffer" }
bitvec = "0.22.3"
itertools = "0.10.1"
itertools-num = "0.1.3"