[package]
name = "cs140-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cs140-common = { path = "../cs140-common" }
cs140-buffer = { path = "../cs140-buffer" }
async-trait = "0.1.51"
cpal = {version="0.13",features=["asio"]}
clap = "2.0.0"
crc = "2.0.0"
anyhow = "1.0.44"
hound = "3.4.0"
rodio = "0.14.0"
rustfft = "6.0.1"
bitvec = "0.22.3"
rand_pcg = "0.3.1"
tokio = { version = "1", features = ["full"] }
log="0.4.14"
env_logger = "0.9.0"
[dev-dependencies]
cs140-util = { path = "../cs140-util" }
rand = "0.8.4"

[[bin]]
name = "debug"
path = "./src/debug.rs"