[package]
name = "cs140-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cs140-common = {path= "../cs140-common" }
cs140-buffer = {path= "../cs140-buffer" }
cs140-frame_handler = {path = "../cs140-frame_handler"}
cs140-project1 = {path = "../cs140-project1"}
cs140-util = {path= "../cs140-util" }
cpal = "0.13.4"
clap = "2.0.0"
anyhow = "1.0.44"
hound = "3.4.0"
rustfft = "6.0.1"
rand = "0.8.4"
rodio = "0.14.0"