[package]
name = "cs140-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cs140-common = { path = "../cs140-common" }
cs140-buffer = { path = "../cs140-buffer" }
cs140-util = { path = "../cs140-util" }
cs140-network = { path = "../cs140-network" }
cpal = { version = "0.13", features = ["asio"] }
clap = "2.0.0"
anyhow = "1.0.44"
hound = "3.4.0"
rustfft = "6.0.1"
rand = "0.8.4"
rodio = "0.14.0"
bitvec = "0.22.3"
tokio = { version = "1", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
pnet = "0.28.0"