[package]
name = "cs140-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cs140-common = { path = "../cs140-common" }
cs140-buffer = { path = "../cs140-buffer" }
cs140-util = { path = "../cs140-util" }
cs140-network = { path = "../cs140-network" }
cpal = { version = "0.13"}
clap = "2.0.0"
anyhow = "1.0.44"
hound = "3.4.0"
rustfft = "6.0.1"
rand = "0.8.4"
rodio = "0.14.0"
bitvec = "0.22.3"
tokio = { version = "1", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
pnet = "0.28.0"
pcap = "0.9"
winapi = { version = "0.3.8", features = [ "std" ] }
regex = "1"
libc = "0.2"
libloading = "0.6"
windivert = "0.3.1"

[[bin]]
name = "tcp_test"
path = "../cs140-playground/src/tcp_test.rs"

[[bin]]
name = "pcap_test"
path = "../cs140-playground/src/pcap_test.rs"

[[bin]]
name = "build_lib"
path = "../cs140-playground/src/build.rs"

[[bin]]
name = "windivert_test"
path = "../cs140-playground/src/windivert_test.rs"