[package]
name = "cs140-project1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cs140-common = {path= "../cs140-common" }
cs140-buffer = {path= "../cs140-buffer" }
cs140-network = {path= "../cs140-network" }
cs140-util = {path= "../cs140-util" }
cpal = {version="0.13",features=["asio"]}
clap = "2.0.0"
anyhow = "1.0.44"
hound = "3.4.0"
rodio = "0.14.0"
rand="0.8.4"
rand_pcg = "0.3.1"
bitvec = "0.22.3"
reed-solomon-erasure = { version = "4.0", features = ["simd-accel"] }
# reed-solomon-erasure = "4.0"