[package]
name = "cs140-project3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cs140-util = {path = "../cs140-util"}
cs140-network = {path = "../cs140-network"}
cs140-common = {path = "../cs140-common"}
tokio = { version = "1", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
socket2 = {version = "0.4.2", features = ["all"]}
pnet = "0.28.0"
bincode="2.0.0-alpha.1"
once_cell = "1.8.0"
smoltcp = "0.8.0"
futures = "0.3.18"

[[bin]]
name = "jamming_sender"
path = "src/jamming_sender.rs"