[package]
name = "cs140-project3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cs140-util = {path = "../cs140-util"}
cs140-network = {path = "../cs140-network"}
cs140-common = {path = "../cs140-common"}
tokio = { version = "1", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
socket2 = {version = "0.4.2", features = ["all"]}
pnet = "0.28.0"
bincode="2.0.0-alpha.1"
once_cell = "1.8.0"
smoltcp = "0.8.0"
futures = "0.3.18"

[[bin]]
name = "sender"
path = "src/sender.rs"

[[bin]]
name = "receiver"
path = "src/receiver.rs"

[[bin]]
name = "udp_receiver"
path = "src/udp_receiver.rs"

[[bin]]
name = "udp_sender"
path = "src/udp_sender.rs"

[[bin]]
name = "nat_server"
path = "src/nat_server.rs"

[[bin]]
name = "ping"
path = "src/ping.rs"

[[bin]]
name = "ping_reply"
path = "src/ping_reply.rs"

[[bin]]
name = "redirect_server"
path = "src/redirect_server.rs"

[[bin]]
name = "redirect_server_tcp"
path = "src/redirect_server_tcp.rs"

[[bin]]
name = "tcp_client"
path = "src/tcp_client.rs"

[[bin]]
name = "tcp_server"
path = "src/tcp_server.rs"

[[bin]]
name = "new_nat_server"
path = "src/new_nat_server.rs"

[[bin]]
name = "new_redirect_server"
path = "src/new_redirect_server.rs"

[[bin]]
name = "ping_server"
path = "src/ping_server.rs"

[[bin]]
name = "tcp_tokio_client"
path = "src/tcp_tokio_client.rs"

[[bin]]
name = "tcp_tokio_server"
path = "src/tcp_tokio_server.rs"