[package]
name = "cs140-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cs140-common = { path = "../cs140-common" }
cs140-buffer = { path = "../cs140-buffer" }
cs140-network = { path = "../cs140-network" }
hound = "3.4.0"
bitvec = "0.22.3"
socket2 = {version = "0.4.2", features = ["all"]}
pnet = "0.28.0"
async-trait = "0.1.51"
bincode="2.0.0-alpha.1"
tokio = { version = "1", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"